# trtx

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: README.txt
docker/: launch.sh
src/: CMakeLists.txt  application.cpp  application.h  buffers.h  common.h  errorRecorder.h  half.h  logger.cpp  logger.h  logging.h  main.cpp
